namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: project
  labels:
    name: project
