ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: project-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-srv
              port:
                number: 5000
